examples/invalid/semantics/redefine_fn.rs
fn a() {
    let b = 42;
}

fn a() {
    let b = 64;
}